--- a/app/static/css/competitors.css
+++ b/app/static/css/competitors.css
@@ -598,6 +598,16 @@ html.dark .progress-icon {
 .progress-icon i {
     font-size: 2.5rem;
     color: white;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .progress-title {
