--- a/app/templates/analyze_video/index.html
+++ b/app/templates/analyze_video/index.html
@@ -107,17 +107,6 @@
             </div>
         </div>
 
-        <!-- Search Results -->
-        <div id="searchResults" class="search-results" style="display: none;">
-            <h3 class="section-title">
-                <i class="ph ph-video"></i>
-                Search Results
-            </h3>
-            <div id="searchResultsGrid" class="results-grid">
-                <!-- Results will be populated here -->
-            </div>
-        </div>
-
         <!-- Progress Section (hidden by default, shown during analysis) -->
         <div class="progress-section" id="progressSection" style="display: none;">
             <div class="progress-card">
@@ -131,8 +120,19 @@
             </div>
         </div>
 
+        <!-- Search Results -->
+        <div id="searchResults" class="search-results" style="display: none;">
+            <h3 class="section-title">
+                <i class="ph ph-video"></i>
+                Search Results
+            </h3>
+            <div id="searchResultsGrid" class="results-grid">
+                <!-- Results will be populated here -->
+            </div>
+        </div>
+
         <!-- History -->
-        <div class="history-section" id="historySection">
+        <div class="history-section" id="historySection" style="margin-top: 8rem;">
             <h3 class="section-title">
                 <i class="ph ph-clock-counter-clockwise"></i>
                 Recent Analyses
