--- a/app/templates/keyword_research/index.html
+++ b/app/templates/keyword_research/index.html
@@ -217,6 +217,10 @@
                             <i class="ph ph-lightbulb"></i>
                             Keyword Opportunities
                         </h3>
+                        <button id="refineKeywordsBtn" class="refine-keywords-btn" onclick="refineKeywords()" style="display: none;">
+                            <i class="ph ph-arrows-clockwise"></i>
+                            <span>Refine Keywords</span>
+                        </button>
                     </div>
 
                     <div class="keywords-grid" id="aiKeywordsGrid">
