--- a/app/templates/keyword_research/index.html
+++ b/app/templates/keyword_research/index.html
@@ -125,6 +125,9 @@
                             <div class="metric-content">
                                 <div class="metric-label">Search Interest</div>
                                 <div class="metric-value" id="interestLevel">-</div>
+                                <div class="metric-sublabel" id="relevanceSubLabel" style="display: none;">
+                                    <span id="relevanceBadge"></span>
+                                </div>
                             </div>
                         </div>
 
