--- a/app/templates/video_title_tags/index.html
+++ b/app/templates/video_title_tags/index.html
@@ -127,6 +127,9 @@
                                             <button class="reference-action-btn clear-btn" onclick="clearChannelKeywords()" title="Clear keywords">
                                                 <i class="ph ph-x"></i> Clear
                                             </button>
+                                            <button class="reference-action-btn save-btn" onclick="saveChannelKeywords()" title="Save keywords" id="saveKeywordsBtn">
+                                                <i class="ph ph-floppy-disk"></i> Save
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -161,8 +164,8 @@
                                             <button class="reference-action-btn clear-btn" onclick="clearReferenceDescription()" title="Clear reference">
                                                 <i class="ph ph-x"></i> Clear
                                             </button>
-                                            <button class="reference-action-btn save-btn" onclick="saveReferenceDescription()" title="Save reference">
-                                                <i class="ph ph-check"></i> Saved
+                                            <button class="reference-action-btn save-btn" onclick="saveReferenceDescription()" title="Save reference" id="saveRefDescBtn">
+                                                <i class="ph ph-floppy-disk"></i> Save
                                             </button>
                                         </div>
                                     </div>
